force-app/main/default/objects/TR1__Job__c/fields/Billing_Address__c.field-meta.xml
<CustomField>
    <fullName>Billing_Address__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Billing Address</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>TR1__Account_Address__c.Address_Type__c</field>
            <operation>equals</operation>
            <value>Billing</value>
        </filterItems>
        <filterItems>
            <field>TR1__Account_Address__c.TR1__Account__c</field>
            <operation>equals</operation>
            <valueField>$Source.Invoice_Account__c</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>TR1__Account_Address__c</referenceTo>
    <relationshipLabel>Jobs</relationshipLabel>
    <relationshipName>Jobs</relationshipName>
    <type>Lookup</type>
</CustomField>