force-app/main/default/objects/TR1__Job__c/fields/CES_Closed_Reason__c.field-meta.xml
<CustomField>
    <fullName>CES_Closed_Reason__c</fullName>
    <label>CES Closed Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Funding Ended</fullName>
            </value>
            <value>
                <fullName>Post-16 Pathway Secured</fullName>
            </value>
            <value>
                <fullName>Reintegration to School/College</fullName>
            </value>
            <value>
                <fullName>Student Moved Out of Area</fullName>
            </value>
            <value>
                <fullName>Employment Secured</fullName>
            </value>
            <value>
                <fullName>Planned Tuition Completed Successfully</fullName>
            </value>
            <value>
                <fullName>Tutor Unsuitable</fullName>
            </value>
            <value>
                <fullName>Provision Unsuitable for Student</fullName>
            </value>
            <value>
                <fullName>Tutor Ended &amp; No Replacement Available</fullName>
            </value>
            <value>
                <fullName>Non‑Engagement / Persistent Absence</fullName>
            </value>
            <value>
                <fullName>Parent/Carer Withdrawal</fullName>
            </value>
            <value>
                <fullName>Commissioner Withdrawal</fullName>
            </value>
            <value>
                <fullName>Health‑Related End</fullName>
            </value>
            <value>
                <fullName>Safeguarding End</fullName>
            </value>
            <value>
                <fullName>Other External Reason</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>