force-app/main/default/objects/TR1__Job__c/fields/Child_Young_Person_Care_Package__c.field-meta.xml
<CustomField>
    <fullName>Child_Young_Person_Care_Package__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Child / Young Person / Care Package</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>sirenum__Site__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Care Package - Adult, Care Package - Child, Child / Young Person</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>sirenum__Site__c</referenceTo>
    <relationshipLabel>Jobs (Child / Young Person / Care Package  Nam)</relationshipLabel>
    <relationshipName>Jobs</relationshipName>
    <type>Lookup</type>
</CustomField>