force-app/main/default/objects/TR1__Job__c/fields/Date_Referral_Received__c.field-meta.xml
<CustomField>
    <fullName>Date_Referral_Received__c</fullName>
    <label>Date Referral Received</label>
    <type>Date</type>
</CustomField>