force-app/main/default/objects/TR1__Job__c/fields/Days_to_Fill__c.field-meta.xml
<CustomField>
    <fullName>Days_to_Fill__c</fullName>
    <formula>IF(
    $RecordType.Name = &quot;Permanent&quot;,
    First_Perm_Placement_Date__c - DATEVALUE(CreatedDate),
    First_Shift_Date__c - DATEVALUE(CreatedDate)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days to Fill</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>