force-app/main/default/objects/TR1__Job__c/fields/Delivery_Setting__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Setting__c</fullName>
    <label>Delivery Setting</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Delivery_Setting</valueSetName>
    </valueSet>
</CustomField>