force-app/main/default/objects/TR1__Job__c/fields/Entitled_to_Expenses__c.field-meta.xml
<CustomField>
    <fullName>Entitled_to_Expenses__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Entitled to Expenses</label>
    <type>Checkbox</type>
</CustomField>