force-app/main/default/objects/TR1__Job__c/fields/Evertime_Sync_Required__c.field-meta.xml
<CustomField>
    <fullName>Evertime_Sync_Required__c</fullName>
    <label>Evertime Sync Required</label>
    <type>DateTime</type>
</CustomField>