force-app/main/default/objects/TR1__Job__c/fields/First_Perm_Placement_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Perm_Placement_Date__c</fullName>
    <label>First Perm Placement Date</label>
    <type>Date</type>
</CustomField>