force-app/main/default/objects/TR1__Job__c/fields/Holiday_Entitlement_No_Days__c.field-meta.xml
<CustomField>
    <fullName>Holiday_Entitlement_No_Days__c</fullName>
    <label>Holiday Entitlement (No. Days)</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>