force-app/main/default/objects/TR1__Job__c/fields/Individual_or_Group_Delivery__c.field-meta.xml
<CustomField>
    <fullName>Individual_or_Group_Delivery__c</fullName>
    <label>Individual or Group Delivery</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Group</fullName>
            </value>
            <value>
                <fullName>One to One</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>