force-app/main/default/objects/TR1__Job__c/fields/Invoice_Account__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Invoice Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Jobs (Invoice Account)</relationshipLabel>
    <relationshipName>Jobs</relationshipName>
    <type>Lookup</type>
</CustomField>