force-app/main/default/objects/TR1__Job__c/fields/Is_this_a_CYP_Service__c.field-meta.xml
<CustomField>
    <fullName>Is_this_a_CYP_Service__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CYP</label>
    <type>Checkbox</type>
</CustomField>