force-app/main/default/objects/TR1__Job__c/fields/Is_this_a_SEND_service__c.field-meta.xml
<CustomField>
    <fullName>Is_this_a_SEND_service__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SEND</label>
    <type>Checkbox</type>
</CustomField>