force-app/main/default/objects/TR1__Job__c/fields/Job_Role_Scale__c.field-meta.xml
<CustomField>
    <fullName>Job_Role_Scale__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Job Role Scale</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Job_Role_Scale__c.Job_Role__c</field>
            <operation>equals</operation>
            <valueField>$Source.s5m__JobRole__c</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Job_Role_Scale__c</referenceTo>
    <relationshipLabel>Jobs</relationshipLabel>
    <relationshipName>Jobs</relationshipName>
    <type>Lookup</type>
</CustomField>