force-app/main/default/objects/TR1__Job__c/fields/Last_Evertime_Sync__c.field-meta.xml
<CustomField>
    <fullName>Last_Evertime_Sync__c</fullName>
    <label>Last Evertime Sync</label>
    <type>DateTime</type>
</CustomField>