force-app/main/default/objects/TR1__Job__c/fields/Location_of_Care_Support__c.field-meta.xml
<CustomField>
    <fullName>Location_of_Care_Support__c</fullName>
    <label>Location of Care/Support</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Location_of_Care_Support</valueSetName>
    </valueSet>
</CustomField>