force-app/main/default/objects/TR1__Job__c/fields/Needs_of_the_Learners__c.field-meta.xml
<CustomField>
    <fullName>Needs_of_the_Learners__c</fullName>
    <label>Needs of the Learners</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Needs_of_the_Learners</valueSetName>
    </valueSet>
</CustomField>