force-app/main/default/objects/TR1__Job__c/fields/Notes_about_the_Job__c.field-meta.xml
<CustomField>
    <fullName>Notes_about_the_Job__c</fullName>
    <label>Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>