force-app/main/default/objects/TR1__Job__c/fields/Outcome_Expected__c.field-meta.xml
<CustomField>
    <fullName>Outcome_Expected__c</fullName>
    <label>Outcome Expected</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Boost academic grades</fullName>
            </value>
            <value>
                <fullName>Closing fundamental gaps</fullName>
            </value>
            <value>
                <fullName>Enhanced progress</fullName>
            </value>
            <value>
                <fullName>Improved attendance at AP</fullName>
            </value>
            <value>
                <fullName>Improved behaviour</fullName>
            </value>
            <value>
                <fullName>Increased confidence &amp; self‑efficacy</fullName>
            </value>
            <value>
                <fullName>Increased independence</fullName>
            </value>
            <value>
                <fullName>Re‑engagement in learning</fullName>
            </value>
            <value>
                <fullName>Re‑integration into education</fullName>
            </value>
            <value>
                <fullName>Re‑integration into post‑16 pathway</fullName>
            </value>
            <value>
                <fullName>Stabilisation during crisis or transition</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>