force-app/main/default/objects/TR1__Job__c/fields/Outcome_Result__c.field-meta.xml
<CustomField>
    <fullName>Outcome_Result__c</fullName>
    <label>Outcome Result</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Outcome Expected</fullName>
            </value>
            <value>
                <fullName>Outcome Met</fullName>
            </value>
            <value>
                <fullName>Outcome Not Met</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>