force-app/main/default/objects/TR1__Job__c/fields/Provision_Type__c.field-meta.xml
<CustomField>
    <fullName>Provision_Type__c</fullName>
    <label>Provision Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Alternative Provision</fullName>
            </value>
            <value>
                <fullName>Supplementary</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>