force-app/main/default/objects/TR1__Job__c/fields/Purchase_Order_Number__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Order_Number__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Purchase Order Number</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>(1 OR 2 OR 3) AND 4</booleanFilter>
        <filterItems>
            <field>TR1__Purchase_Order__c.TR1__Account__c</field>
            <operation>equals</operation>
            <valueField>$Source.TR1__Account__c</valueField>
        </filterItems>
        <filterItems>
            <field>TR1__Purchase_Order__c.Sensitive_Data_Record__c</field>
            <operation>equals</operation>
            <valueField>$Source.Sensitive_Data_Record__c</valueField>
        </filterItems>
        <filterItems>
            <field>TR1__Purchase_Order__c.Site__c</field>
            <operation>equals</operation>
            <valueField>$Source.s5m__Site__c</valueField>
        </filterItems>
        <filterItems>
            <field>TR1__Purchase_Order__c.TR1__Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>TR1__Purchase_Order__c</referenceTo>
    <relationshipLabel>Jobs</relationshipLabel>
    <relationshipName>Jobs</relationshipName>
    <type>Lookup</type>
</CustomField>