force-app/main/default/objects/TR1__Job__c/fields/Reason_for_Referral__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Referral__c</fullName>
    <label>Reason for Referral</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Reason_for_Referral</valueSetName>
    </valueSet>
</CustomField>