force-app/main/default/objects/TR1__Job__c/fields/Reason_for_Referral_Description__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Referral_Description__c</fullName>
    <label>Reason for Referral Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>