force-app/main/default/objects/TR1__Job__c/fields/Risk_Matrix__c.field-meta.xml
<CustomField>
    <fullName>Risk_Matrix__c</fullName>
    <formula>TEXT(Child_Young_Person_Care_Package__r.Sensitive_Data_Record__r.Risk_Matrix__c)</formula>
    <label>Risk Matrix</label>
    <type>Text</type>
</CustomField>