force-app/main/default/objects/TR1__Job__c/fields/SEND_Support_Type__c.field-meta.xml
<CustomField>
    <fullName>SEND_Support_Type__c</fullName>
    <label>SEND Support Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SEND_Support_Type</valueSetName>
    </valueSet>
</CustomField>