force-app/main/default/objects/TR1__Job__c/fields/Sent_to_CMS__c.field-meta.xml
<CustomField>
    <fullName>Sent_to_CMS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sent to CMS</label>
    <type>Checkbox</type>
</CustomField>