force-app/main/default/objects/TR1__Job__c/fields/TKC_Index_to_Textkernel__c.field-meta.xml
<CustomField>
    <fullName>TKC_Index_to_Textkernel__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, the record will be considered for indexation by Textkernel</description>
    <inlineHelpText>When checked, the record will be considered for indexation by Textkernel</inlineHelpText>
    <label>Index to Textkernel</label>
    <type>Checkbox</type>
</CustomField>