force-app/main/default/objects/TR1__Job__c/fields/TKC_Needs_Indexation__c.field-meta.xml
<CustomField>
    <fullName>TKC_Needs_Indexation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, the record will be queued for TK indexation</description>
    <inlineHelpText>When checked, the record will be queued for TK indexation</inlineHelpText>
    <label>Needs Indexation</label>
    <type>Checkbox</type>
</CustomField>