force-app/main/default/objects/TR1__Job__c/fields/TKC_Record_Type_Name__c.field-meta.xml
<CustomField>
    <fullName>TKC_Record_Type_Name__c</fullName>
    <formula>RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Record Type Name</label>
    <type>Text</type>
</CustomField>