force-app/main/default/objects/TR1__Job__c/fields/TSO_Job_Stage__c.field-meta.xml
<CustomField>
    <fullName>TSO_Job_Stage__c</fullName>
    <formula>CASE(
SUBSTITUTE( SUBSTITUTE( TR1__Most_Advanced_Stage__c , &quot;ATSv2_&quot; , &quot;&quot; ) , &quot;TR1__&quot; , &quot;&quot; ) ,
&quot;&quot; , &quot;No Candidates&quot; ,
&quot;Application&quot; , &quot;Application&quot; ,
&quot;Submittal&quot; , &quot;Submittal&quot; ,
&quot;SendOut&quot;, &quot;Client Interview&quot;,
&quot;Offer&quot;, &quot;Offer&quot;,
&quot;ClosingReport&quot;, &quot;Placement&quot;,
&quot;InternalInterview&quot;, &quot;Internal Interview&quot;,
SUBSTITUTE( SUBSTITUTE( TR1__Most_Advanced_Stage__c , &quot;ATSv2_&quot; , &quot;&quot; ) , &quot;TR1__&quot; , &quot;&quot; )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Job Stage</label>
    <type>Text</type>
</CustomField>