force-app/main/default/objects/TR1__Job__c/fields/Tutoring__c.field-meta.xml
<CustomField>
    <fullName>Tutoring__c</fullName>
    <label>Tutoring</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>In Person</fullName>
            </value>
            <value>
                <fullName>Online</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>