force-app/main/default/objects/TR1__Job__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>AV Live Events</fullName>
            </value>
            <value>
                <fullName>Broadcast</fullName>
            </value>
            <value>
                <fullName>Consultancy</fullName>
            </value>
            <value>
                <fullName>Distributor</fullName>
            </value>
            <value>
                <fullName>Fire and Security</fullName>
            </value>
            <value>
                <fullName>Home Automation</fullName>
            </value>
            <value>
                <fullName>IT (Information Technology)</fullName>
            </value>
            <value>
                <fullName>Manufacturing</fullName>
            </value>
            <value>
                <fullName>Production</fullName>
            </value>
            <value>
                <fullName>Systems Integrator</fullName>
            </value>
            <value>
                <fullName>Telecomms</fullName>
            </value>
            <value>
                <fullName>Unified Comms</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>