force-app/main/default/objects/TR1__Job__c/fields/Type_of_Care_Support__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Care_Support__c</fullName>
    <label>Type of Care/Support</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Types_of_Care</valueSetName>
    </valueSet>
</CustomField>