force-app/main/default/objects/TR1__Job__c/fields/Who_Is_The_Support_For__c.field-meta.xml
<CustomField>
    <fullName>Who_Is_The_Support_For__c</fullName>
    <label>Who Is The Support For?</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Who_Is_The_Support_For</valueSetName>
    </valueSet>
</CustomField>