force-app/main/default/objects/TR1__Job__c/fields/Worker_Type__c.field-meta.xml
<CustomField>
    <fullName>Worker_Type__c</fullName>
    <label>Worker Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Worker_Type</valueSetName>
    </valueSet>
</CustomField>