force-app/main/default/objects/TR1__Job__c/recordTypes/Ad_Hoc.recordType-meta.xml
<RecordType>
    <fullName>Ad_Hoc</fullName>
    <active>true</active>
    <description>Job for one-off shifts only</description>
    <label>Ad-Hoc</label>
</RecordType>