force-app/main/default/objects/TR1__Job__c/validationRules/Multi_Client_Job_Client.validationRule-meta.xml
<ValidationRule>
    <fullName>Multi_Client_Job_Client</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    RecordType.DeveloperName = &quot;Multi_Child_Young_Person_Contract&quot;,
    NOT(TR1__Account__r.Multi_Client_Job_Client__c)
)</errorConditionFormula>
    <errorMessage>You cannot set the Client of a Multi-Child/Young Person Job to any other Client than the nominated &apos;dummy&apos; Client record</errorMessage>
</ValidationRule>